SERVER-58801 Clear tracked filenames in BackupCursorService when backup cursor is closed

GitOrigin-RevId: 2cd8cb67a36bc06a148b3687d7f9f472f235c0d5